[package]
name = "real_time_sessions"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "real_time_sessions"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

real_time_sessions_integrity = { path = "../../integrity/real_time_sessions", package = "real_time_sessions_integrity" }
